--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ html {
 .flexed{
     display: flex;
     color: white;
-    column-gap: 1px;
+    column-gap: 5px;
 }
 
 .format-f{
@@ -14,10 +14,10 @@ html {
 
   .image-a{
     float: left;
-    margin-left: 0px;
+    margin-left: 5px;
   }
 
   .image-b{
-    float: right;
-    margin-right: 0px;
+    float: left;
+    margin-left: 5px;
   }
