--- a/style.css
+++ b/style.css
@@ -30,8 +30,7 @@ html {
 
 a[href="./resume.html"]{
     color:rgb(148, 254, 254);
-    position: absolute;
-    right: 680px;
+    background: black;
 }
 
 .top{
