--- a/style.css
+++ b/style.css
@@ -31,6 +31,8 @@ html {
 a[href="./resume.html"]{
     color:rgb(148, 254, 254);
     background: black;
+    margin-left: 700px;
+    margin-bottom: 50px;
 }
 
 .top{
@@ -45,7 +47,7 @@ a[href="./resume.html"]{
 
 .headera{
     position: sticky;
-    margin-left: 600px;
+    margin-left: 700px;
     color: white;
     font-size: 2em;
     
