--- a/style.css
+++ b/style.css
@@ -31,8 +31,8 @@ html {
 a[href="./resume.html"]{
     color:rgb(148, 254, 254);
     background: black;
-    margin-left: 660px;
-    margin-bottom: 1000px;
+    margin-left: 700px;
+    margin-top: -10px;
 }
 
 .top{
@@ -47,7 +47,7 @@ a[href="./resume.html"]{
 
 .headera{
     position: sticky;
-    margin-left: 700px;
+    margin-left: 650px;
     color: white;
     font-size: 2em;
     
