--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ a[href="./resume.html"]{
     color:rgb(148, 254, 254);
     background: black;
     margin-left: 700px;
-    margin-top: -10px;
+    height: 40px;
 }
 
 .top{
