--- a/style.css
+++ b/style.css
@@ -31,12 +31,13 @@ html {
 a[href="./resume.html"]{
     color:rgb(148, 254, 254);
     background: black;
+    position: relative;
     margin-left: 700px;
+    top: 50px;
 }
 
 .top{
     background: black;
-    margin-top: 100px;
 }
 
 .header{
