--- a/style.css
+++ b/style.css
@@ -57,3 +57,9 @@ a[href="./index.html"]{
     font-size: 2em;
     margin-bottom: 0;
 }
+
+.title{
+    margin-left: 655px;
+    font-size: 2em;
+    margin-bottom: 10;
+}
