--- a/style.css
+++ b/style.css
@@ -44,6 +44,10 @@ a[href="./index.html"]{
     margin-left: 700px;
 }
 
+a[href="./preproduction.html"]{
+    color:rgb(148, 254, 254);
+}
+
 .top{
     background: black;
 }
