--- a/style.css
+++ b/style.css
@@ -77,3 +77,8 @@ a[href="https://connor-miller.itch.io/"]{
     margin-left: 660px;
     font-size: 1em;
 }
+
+.contact {
+    line-height: 1.4em;
+    width: 500px;
+}
