--- a/style.css
+++ b/style.css
@@ -78,6 +78,11 @@ a[href="https://connor-miller.itch.io/"]{
     font-size: 1em;
 }
 
+a[href="https://connor-miller.itch.io/momart-inc"] {
+    margin-left: 660px;
+    font-size: 1em;
+}
+
 .contact {
     line-height: 1.4em;
     width: 500px;
