--- a/style.css
+++ b/style.css
@@ -85,5 +85,6 @@ a[href="https://connor-miller.itch.io/momart-inc"] {
 
 .contact {
     line-height: 1.4em;
-    width: 500px;
+    width: 600px;
+    margin-left: 100px;
 }
