--- a/style.css
+++ b/style.css
@@ -83,8 +83,8 @@ a[href="https://connor-miller.itch.io/momart-inc"] {
     font-size: 1em;
 }
 
-.contact {
+.description {
     line-height: 1.4em;
     width: 600px;
-    margin-left: 100px;
+    margin-left: 200px;
 }
