--- a/style.css
+++ b/style.css
@@ -87,4 +87,6 @@ a[href="https://connor-miller.itch.io/momart-inc"] {
     line-height: 1.4em;
     width: 600px;
     margin-left: 400px;
+    border-top: 2px dotted rgb(7, 7, 7);
+    background-color:rgb(92, 90, 90);
 }
