--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ a[href="./preproduction.html"]{
 .title{
     margin-left: 660px;
     font-size: 2em;
-    margin-bottom: 10px;
+    margin-bottom: 100px;
     margin-top: 50px;
 }
 
@@ -92,8 +92,9 @@ a[href="https://connor-miller.itch.io/momart-inc"] {
     border-right: 2px solid rgb(20, 20, 20);
     border-bottom: 2px solid rgb(20, 20, 20);
     background-color:rgb(77, 74, 74);
+    margin-top: 50px;
 }
 
 .contact {
-    color: white;
+    color: rgb(224, 224, 224);
 }
