--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 html {
-    background: #e3e3e3;
+    background: #ffffff;
 }
 
 body {
     padding: 40px;
-    background: rgb(0, 0, 0);
+    background: rgb(179, 179, 179);
 }
 
 .flexed{
