--- a/style.css
+++ b/style.css
@@ -141,3 +141,8 @@ a[href="https://connor-miller.itch.io/momart-inc"] {
 .title-c{
     font-size: 2em;
 }
+
+.title-d{
+    font-size: 2em;
+    margin-bottom: 0;
+}
