--- a/style.css
+++ b/style.css
@@ -56,7 +56,15 @@ a[href="./preproduction.html"]{
 }
 
 .prea {
-    margin-left: 600px;
+    margin-left: 550px;
+}
+
+.prei {
+    margin-left: 10px;
+}
+
+.portfolior{
+    margin-left: 10px;
 }
 
 .top{
