--- a/style.css
+++ b/style.css
@@ -215,11 +215,18 @@ a[href="https://connor-miller.itch.io/momart-inc"] {
     display: flex;
     color: rgb(0, 0, 0);
     column-gap: 200px;
-    margin-left: 250px;
+    margin-left: 200px;
     margin-bottom: 100px
   }
 
 .colorsize {
     color: rgb(224, 224, 224);
     font-size: 1em;
+}
+
+.description-r {
+    line-height: 1.4em;
+    width: 600px;
+    margin-left: 420px;
+    margin-top: 50px;
 }
