--- a/style.css
+++ b/style.css
@@ -215,7 +215,7 @@ a[href="https://connor-miller.itch.io/momart-inc"] {
     display: flex;
     color: rgb(0, 0, 0);
     column-gap: 200px;
-    margin-left: 200px;
+    margin-left: 210px;
     margin-bottom: 100px
   }
 
@@ -229,4 +229,18 @@ a[href="https://connor-miller.itch.io/momart-inc"] {
     width: 600px;
     margin-left: 420px;
     margin-top: 50px;
+}
+
+.title-f{
+    margin-left: 640px;
+    font-size: 2em;
+    margin-bottom: 50px;
+    margin-top: 50px;
+    color: black;
+}
+
+.contact-e{
+    color: rgb(0, 0, 0);
+    margin-top: 0;
+    margin-bottom: 50px;
 }
