--- a/style.css
+++ b/style.css
@@ -229,6 +229,11 @@ a[href="https://connor-miller.itch.io/momart-inc"] {
     width: 600px;
     margin-left: 420px;
     margin-top: 50px;
+    border-top: 2px solid rgb(20, 20, 20);
+    border-left: 2px solid rgb(20, 20, 20);
+    border-right: 2px solid rgb(20, 20, 20);
+    border-bottom: 2px solid rgb(20, 20, 20);
+    background-color:rgb(77, 74, 74);
 }
 
 .title-f{
@@ -242,5 +247,12 @@ a[href="https://connor-miller.itch.io/momart-inc"] {
 .contact-e{
     color: rgb(0, 0, 0);
     margin-top: 0;
-    margin-bottom: 50px;
+}
+
+.title-b{
+    margin-left: 630px;
+    font-size: 2em;
+    margin-bottom: 70px;
+    margin-top: 50px;
+    color: black;
 }
