--- a/style.css
+++ b/style.css
@@ -227,7 +227,7 @@ a[href="https://connor-miller.itch.io/momart-inc"] {
 .description-r {
     line-height: 1.4em;
     width: 400px;
-    margin-left: 500px;
+    margin-left: 510px;
     margin-top: 50px;
     border-top: 2px solid rgb(20, 20, 20);
     border-left: 2px solid rgb(20, 20, 20);
@@ -247,6 +247,7 @@ a[href="https://connor-miller.itch.io/momart-inc"] {
 .contact-e{
     color: rgb(255, 255, 255);
     margin-top: 0;
+    margin-bottom: 0;
 }
 
 .title-b{
