--- a/style.css
+++ b/style.css
@@ -264,3 +264,13 @@ a[href="https://connor-miller.itch.io/momart-inc"] {
     margin-top: 50px;
     color: black;
 }
+
+.format-g{
+    max-width: 40%;
+  }
+
+.image-c{
+    float: middle;
+    margin-bottom: 30px;
+    margin-top: 30px;
+  }
