--- a/style.css
+++ b/style.css
@@ -273,4 +273,5 @@ a[href="https://connor-miller.itch.io/momart-inc"] {
     float: middle;
     margin-bottom: 30px;
     margin-top: 30px;
+    margin-left: 400px;
   }
