--- a/style.css
+++ b/style.css
@@ -277,7 +277,7 @@ a[href="https://connor-miller.itch.io/momart-inc"] {
   }
 
   .title-h{
-    margin-left: 5750px;
+    margin-left: 575px;
     font-size: 2em;
     margin-bottom: 50px;
     margin-top: 50px;
@@ -300,5 +300,12 @@ a[href="https://connor-miller.itch.io/momart-inc"] {
     float: middle;
     margin-bottom: 30px;
     margin-top: 30px;
-    margin-left: 500px;
+    margin-left: 520px;
+  }
+
+  .image-e{
+    float: middle;
+    margin-bottom: 30px;
+    margin-top: 30px;
+    margin-left: 540px;
   }
